[gd_scene load_steps=6 format=3 uid="uid://ciyu5clnsnnnl"]

[ext_resource type="Texture2D" uid="uid://cnnkkme0v3bxt" path="res://icon.svg" id="1_3qydi"]
[ext_resource type="Script" path="res://Player/player.gd" id="1_q3lat"]
[ext_resource type="PackedScene" uid="uid://be3by3skg67jb" path="res://common/HurtBox/Hurbox.tscn" id="3_ddoul"]
[ext_resource type="PackedScene" uid="uid://x02bbykoiory" path="res://common/HealthComponent/HealthComponent.tscn" id="4_8g4oa"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_q3lat"]
radius = 40.7297
height = 144.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_q3lat")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 2)
rotation = 1.56955
shape = SubResource("CapsuleShape2D_q3lat")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0.500001, 0)
rotation = 1.57041
scale = Vector2(0.554688, 1)
texture = ExtResource("1_3qydi")

[node name="Hurtbox" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("3_ddoul")]
collision_layer = 0
collision_mask = 2
monitorable = false
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(4.65661e-10, 4.76837e-07)
rotation = 4.69332
shape = SubResource("CapsuleShape2D_q3lat")

[node name="HealthComponent" parent="." instance=ExtResource("4_8g4oa")]

[node name="ShootPosition" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(71, 1)

[connection signal="death" from="HealthComponent" to="." method="_on_death"]
[connection signal="hp_damaged" from="HealthComponent" to="." method="_on_hp_damaged"]
